ajuste da posição de "tratamentos" no menu

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </div>
 
         <nav>
-            <div class="dropdown navItem">
-                <a href="#" class="navText">Tratamentos</a>
+            <div class="dropdown">
+                <a href="#" class=" navItem navText">Tratamentos</a>
                 <div class="tratDropdown">
                     <a href="#tratamentoS" class="tratS">Senhora</a>
                     <a href="#tratamentoS" class="tratH">Homem</a>
