v de à uma semana

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header>
         <a href="index.html" class="icon">
-            <img src="imgs/Icons_Nadiya-01.png" alt="">
+            <img src="imgs/Icons_Nadiya-01.png" alt="Logotipo Belezza Estetica" width="100px"> </button>
         </a>
 
         <!-- Icon para o menu responsivo-->
@@ -24,25 +24,62 @@
         </div>
 
         <nav>
-            <div class="dropdown">
-                <a href="#" class=" navItem navText">Tratamentos</a>
+            <div class="dropdown navItem">
+                <a href="#trat" class="  navText">Tratamentos</a>
                 <div class="tratDropdown">
                     <a href="#tratamentoS" class="tratS">Senhora</a>
                     <a href="#tratamentoS" class="tratH">Homem</a>
                 </div>
             </div> 
 
-            <a href="#news" class="navText navItem">Promo&ccedil;&otilde;es</a>
-            <a href="#about" class="navText navItem">Testemunhos</a>
-            <a href="#about" class="navText navItem">Agendar</a>
-            <a href="#contact" class="navText navItem">Contactos</a>
+            <a href="#promo" class="navText navItem">Promo&ccedil;&otilde;es</a>
+            <a href="#test" class="navText navItem">Testemunhos</a>
+            <a href="#agendar" class="navText navItem">Agendar</a>
+            <a href="#cont" class="navText navItem">Contactos</a>
         </nav>
     </header>
 
     <main>
-        <section id="Tratamentos"></section>
-        <section id="Promocoes"></section>
-        <section id="Contactos"></section>
+        <section id="trat"><!-- Tratamentos -->
+            <div class="tab">
+                <button class="tablinks tabS active" onclick="showTratS()"><img src="imgs/Icons_Nadiya-11.png" alt="tratamento Senhora" width="100px"> </button>
+                <button class="tablinks tabH" onclick="showTratH()"><img src="imgs/Icons_Nadiya-06.png" alt="tratamento Homem" width="100px"> </button>
+            </div>
+            <div class="tratS">
+                <ul>
+                    <li>Depilação a laser</li>
+                    <li>Depilação a cera</li>
+                    <li>Tratamento de unhas</li>
+                    <li>Tratamento de pele</li>
+                    <li>Tratar gurdura</li>
+                    <li>Tratar celulite</li>
+                </ul>
+            </div>
+            <div class="tratH">
+                <ul>
+                    <li>Depilaçao laser</li>
+                    <li>Depilação a laser</li>
+                    <li>Depilaçao ao peito</li>
+                    <li>Tratamento de pele</li>
+                </ul>
+            </div>
+        </section><!-- /Tratamentos -->
+
+        <section id="promo"><!-- /Pormocoes -->
+
+        </section><!-- /Pormocoes -->
+
+        <section id="test"><!-- Testemunhos -->
+
+        </section><!-- /Testemunhos -->
+
+        <section id="agendar"><!-- /Agendar -->
+
+        </section><!-- /Agendar -->
+
+        <section id="cont"><!-- Contactos -->
+
+        </section><!-- /Contactos -->
 
         <section class="todo" style="background-color: silver; color:green">
             <h1>TODO</h1>
