adicionei uma imagem

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <div class="uniTrat">
                     <div class="trattexto">Tratamento de Corpo<br><a href="">Saber mais</a></div>
-                    <img src="imgs/imag7.png" alt="Imagem Tratamento de Corpo" width="150">
+                    <img src="imgs/imag4.webp" alt="Imagem Tratamento de Corpo" width="150">
                 </div>
                 
                 <div class="uniTrat">
@@ -74,22 +74,22 @@
             <div class="tratH">
                 <div class="uniTrat">
                     <div class="trattexto">Depila&ccedil;&atilde;o a laser<br><a href="">Saber mais</a></div> 
-                    <img src="imgs/imag7.png" alt="Imagem Depila&ccedil;&atilde;o a laser" width="150">
+                    <img src="imgs/imag5.png" alt="Imagem Depila&ccedil;&atilde;o a laser" width="150">
                 </div>
 
                 <div class="uniTrat">
                     <div class="trattexto">Tratamento de Corpo<br><a href="">Saber mais</a></div>
-                    <img src="imgs/imag5.png" alt="Imagem Tratamento de Corpo" width="150">
+                    <img src="imgs/imag8.png" alt="Imagem Tratamento de Corpo" width="150">
                 </div>
                 
                 <div class="uniTrat">
                     <div class="trattexto">Tratamento de Rosto<br><a href="">Saber mais</a></div>
-                    <img src="imgs/imag4.png" alt="Imagem Tratamento de Rosto" width="150">
+                    <img src="imgs/imag6.png" alt="Imagem Tratamento de Rosto" width="150">
                 </div>
 
                 <div class="uniTrat">
                     <div class="trattexto">Massagem<br><a href="">Saber mais</a></div>
-                    <img src="imgs/imag6.png" alt="Imagem Massagem" width="150">
+                    <img src="imgs/imag7.png" alt="Imagem Massagem" width="150">
                 </div>
             </div>
         </section><!-- /Tratamentos -->
